--- a/project.config.json
+++ b/project.config.json
@@ -15,6 +15,8 @@
 	"appid": "wx77494a4939d29106",
 	"projectname": "niudanji-yonghu",
 	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
