--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/result/result",
     "pages/mingxi/mingxi",
     "pages/pay/pay",
     "pages/recharge/recharge",
@@ -12,8 +13,8 @@
     "pages/aboutUs/aboutUs",
     "pages/historyOrder/historyOrder",
     "pages/member/member",
-    "pages/result/result",
-    "pages/myInfo/myInfo",
+    
+    "pages/myInfo/myInfo", 
     "pages/middle/middle",
     "pages/newsDetails/newsDetails",
     "pages/bannerDetails/bannerDetails"
@@ -47,5 +48,10 @@
       }
     ]
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "permission": {
+    "scope.userLocation": {
+      "desc": "需要获取您的位置信息用来展示附近的设备"
+    }
+  }
 }
